adding database and updating swaggerdoc
